legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr22308-1.c-5.4.0-1.out.txt
pr22308-1.c: In function ‘bar’:
pr22308-1.c:12:5: error: assignment of read-only variable ‘t’
   t = s;  
     ^
